basic friend systen is in place
